@@ -343,8 +343,6 @@ argument_list|,
 literal|"DirectUpdateHandler2"
 argument_list|,
 literal|false
-argument_list|,
-literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -494,6 +492,12 @@ operator|!=
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+operator|!
+name|rollback
+condition|)
+block|{
 try|try
 block|{
 name|log
@@ -532,6 +536,47 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+else|else
+block|{
+try|try
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Rollback old IndexWriter... core="
+operator|+
+name|coreName
+argument_list|)
+expr_stmt|;
+name|indexWriter
+operator|.
+name|rollback
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|t
+parameter_list|)
+block|{
+name|SolrException
+operator|.
+name|log
+argument_list|(
+name|log
+argument_list|,
+literal|"Error rolling back old IndexWriter. core="
+operator|+
+name|coreName
+argument_list|,
+name|t
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 name|indexWriter
 operator|=
 name|createMainIndexWriter
@@ -539,8 +584,6 @@ argument_list|(
 name|core
 argument_list|,
 literal|"DirectUpdateHandler2"
-argument_list|,
-literal|false
 argument_list|,
 literal|true
 argument_list|)
@@ -748,11 +791,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|indexWriter
-operator|.
-name|rollback
-argument_list|()
-expr_stmt|;
 name|newIndexWriter
 argument_list|(
 name|core
@@ -771,9 +809,6 @@ name|core
 parameter_list|,
 name|String
 name|name
-parameter_list|,
-name|boolean
-name|removeAllExisting
 parameter_list|,
 name|boolean
 name|forceNewDirectory
@@ -797,7 +832,7 @@ operator|.
 name|getDirectoryFactory
 argument_list|()
 argument_list|,
-name|removeAllExisting
+literal|false
 argument_list|,
 name|core
 operator|.
