@@ -588,6 +588,19 @@ name|isClosed
 operator|=
 literal|true
 expr_stmt|;
+name|directoryFactory
+operator|.
+name|release
+argument_list|(
+name|getDirectory
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|numCloses
+operator|.
+name|incrementAndGet
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 annotation|@
